--- a/index.html
+++ b/index.html
@@ -115,6 +115,25 @@ blockquote.twitter-tweet {
   max-width: 468px;
   background: #FFFFFF;
 }
+  
+  
+blockquote.twitter-tweet p {
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 20px;
+}
+
+blockquote.twitter-tweet a {
+  color: inherit;
+  font-weight: normal;
+  text-decoration: none;
+  outline: 0 none;
+}
+
+blockquote.twitter-tweet a:hover,
+blockquote.twitter-tweet a:focus {
+  text-decoration: underline;
+}
 </style>
 </head>
 <body>
