--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ img[class^=imgrow] {
 <div class="banner">
 <img class="banner" src="https://raw.githubusercontent.com/MorphixTTV/morphixttv.github.io/main/Banner.png" alt="Incontrol Banner"/>
 
-<blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">With immense grief, we announce Geoff’s unexpected passing due to sudden illness Saturday. We ask privacy as his family works to understand what happened and make arrangements. To honor Geoff or offer comfort to his family, we suggest donations to <a href="https://twitter.com/SoCalBulldog?ref_src=twsrc%5Etfw">@SoCalBulldog</a>, which he loved.</p>&mdash; Geoff Robinson (@iNcontroLTV) <a href="https://twitter.com/iNcontroLTV/status/1153103748308381696?ref_src=twsrc%5Etfw">July 22, 2019</a></blockquote> <script async src="/morphixttv.github.io/docs/assets/widgets.js" charset="utf-8"></script> 
+<blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">With immense grief, we announce Geoff’s unexpected passing due to sudden illness Saturday. We ask privacy as his family works to understand what happened and make arrangements. To honor Geoff or offer comfort to his family, we suggest donations to <a href="https://twitter.com/SoCalBulldog?ref_src=twsrc%5Etfw">@SoCalBulldog</a>, which he loved.</p>&mdash; Geoff Robinson (@iNcontroLTV) <a href="https://twitter.com/iNcontroLTV/status/1153103748308381696?ref_src=twsrc%5Etfw">July 22, 2019</a></blockquote> <script async src="https://raw.githubusercontent.com/MorphixTTV/morphixttv.github.io/main/docs/assets/widgets.js" charset="utf-8"></script> 
 </div>
 
 
@@ -129,7 +129,7 @@ img[class^=imgrow] {
 
 <div class="imgrow">
 
-        <a href="https://twitter.com/iNcontroLTV"><img class="imgrow1 imggrey" src="/morphixttv.github.io/docs/assets/Twitter200x200.png" width="200" height="200" alt="Incontrol Twitter" /></a>
+        <a href="https://twitter.com/iNcontroLTV"><img class="imgrow1 imggrey" src="https://raw.githubusercontent.com/MorphixTTV/morphixttv.github.io/main/Twitter200x200.png" width="200" height="200" alt="Incontrol Twitter" /></a>
        <a href="https://www.facebook.com/iNcontroLTV"><img class="imgrow1 imggrey" src="https://raw.githubusercontent.com/MorphixTTV/morphixttv.github.io/main/Fb200x200.png" width="200" height="200" alt="Incontrol Facebook" /></a>
           
 </div>
