--- a/index.html
+++ b/index.html
@@ -98,7 +98,43 @@ img[class^=imgrow] {
   font-size: 16px;
   padding: 16px 32px;
 }
-  
+
+blockquote.twitter-tweet {
+  display: block;
+  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 16px;
+  border-color: #eee #ddd #bbb;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  margin: 10px 5px;
+  padding: 0 16px 16px 16px;
+  max-width: 468px;
+  background: #FFFFFF;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+blockquote.twitter-tweet p {
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 20px;
+}
+
+blockquote.twitter-tweet a {
+  color: inherit;
+  font-weight: normal;
+  text-decoration: none;
+  outline: 0 none;
+}
+
+blockquote.twitter-tweet a:hover,
+blockquote.twitter-tweet a:focus {
+  text-decoration: underline;
+}
 </style>
 </head>
 <body>
@@ -109,7 +145,7 @@ img[class^=imgrow] {
 <div class="banner">
 <img class="banner" src="https://raw.githubusercontent.com/MorphixTTV/morphixttv.github.io/main/Banner.png" alt="Incontrol Banner"/>
 
-<blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">With immense grief, we announce Geoff’s unexpected passing due to sudden illness Saturday. We ask privacy as his family works to understand what happened and make arrangements. To honor Geoff or offer comfort to his family, we suggest donations to <a href="https://twitter.com/SoCalBulldog?ref_src=twsrc%5Etfw">@SoCalBulldog</a>, which he loved.</p>&mdash; Geoff Robinson (@iNcontroLTV) <a href="https://twitter.com/iNcontroLTV/status/1153103748308381696?ref_src=twsrc%5Etfw">July 22, 2019</a></blockquote> <script async src="https://raw.githubusercontent.com/MorphixTTV/morphixttv.github.io/main/docs/assets/widgets.js" charset="utf-8"></script> 
+<blockquote class="twitter-tweet tw-align-center"><p lang="en" dir="ltr">With immense grief, we announce Geoff’s unexpected passing due to sudden illness Saturday. We ask privacy as his family works to understand what happened and make arrangements. To honor Geoff or offer comfort to his family, we suggest donations to <a href="https://twitter.com/SoCalBulldog?ref_src=twsrc%5Etfw">@SoCalBulldog</a>, which he loved.</p>&mdash; Geoff Robinson (@iNcontroLTV) <a href="https://twitter.com/iNcontroLTV/status/1153103748308381696?ref_src=twsrc%5Etfw">July 22, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </div>
 
 
