--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ blockquote.twitter-tweet a:focus {
 </div>
 
 <div class="center">
-<p style="color:white;font-size:66%">Made and maintained with love and respect by a fan. <a href="mailto:incontrolgg@outlook.com">Contact</a>
+<p style="color:white;font-size:66%">Made and maintained with love and respect by a fan.
 </p>
 </div>
 
