--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@ blockquote.twitter-tweet a:focus {
 <div class="center">
 <p style="color:white;font-size:66%">Made and maintained with love and respect by a fan.
 </p>
+<a href="https://mailhide.io/e/NdePrATm" onclick="popup=window.open('https://mailhide.io/e/NdePrATm','mailhidepopup','width=580,height=635'); return false;" style="color:white;font-size:66%">Contact</a>
 </div>
 
 </body>
