--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ blockquote.twitter-tweet a:focus {
 
 
 <div class="container">
-       <a href="https://socalbulldogrescue.org/help-us/donate/"><img class="SoCal image" src="https://raw.githubusercontent.com/MorphixTTV/morphixttv.github.io/main/SoCal200x200.png" alt="Southern California Bulldog Rescue" width="200" height="200"/></a>
+       <a href="https://socalbulldogrescue.org/how-to-help/donate"><img class="SoCal image" src="https://raw.githubusercontent.com/MorphixTTV/morphixttv.github.io/main/SoCal200x200.png" alt="Southern California Bulldog Rescue" width="200" height="200"/></a>
   <div class="middle">
     <a href="https://socalbulldogrescue.org/how-to-help/donate" class="button">Donate</a>
   </div>
