--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@ blockquote.twitter-tweet a:focus {
           
 </div>
 
+<div class="imgrow">
+
+        <a href="http://aligulac.com/players/358/"><img class="imgrow1 imggrey" src="https://raw.githubusercontent.com/MorphixTTV/morphixttv.github.io/main/Aligulac200x200.png" width="200" height="200" alt="Starcraft Rating History for iNcontrol" /></a>
+                 
+</div>
+
 <div class="center">
 <p style="color:white;font-size:66%">Made and maintained with love and respect by a fan.
 </p>
